<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:layout_marginTop="4dp"
        android:lineSpacingExtra="8sp"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@android:color/background_light"
            android:text="@string/add"
            android:textColor="@android:color/holo_red_light"
            android:textSize="36sp" />

        <Button
            android:id="@+id/subBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@android:color/background_light"
            android:text="@string/subtract"
            android:textColor="@android:color/holo_red_light"
            android:textSize="36sp" />

        <Button
            android:id="@+id/multiplyBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@android:color/background_light"
            android:text="@string/multiply"
            android:textColor="@android:color/holo_red_light"
            android:textSize="36sp" />

        <Button
            android:id="@+id/divideBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@android:color/background_light"
            android:text="@string/divide"
            android:textColor="@android:color/holo_red_light"
            android:textSize="36sp" />

        <Button
            android:id="@+id/equalBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@android:color/background_light"
            android:text="@string/equal"
            android:textColor="@android:color/holo_red_light"
            android:textSize="36sp" />
    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_1"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <Button
            android:id="@+id/zeroBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/threeBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_3"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/twoBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_2"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_7"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_4"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_5"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_8"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/dotBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/dot"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_6"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/_9"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@android:color/background_light"
            android:text="@string/clear"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_column="3"
            app:layout_row="3" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>